--- a/StudentSystem/src/Clients/StudentSystem.Clients.Mvc/packages.config
+++ b/StudentSystem/src/Clients/StudentSystem.Clients.Mvc/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net47" />
   <package id="bootstrap" version="3.3.7" targetFramework="net47" />
+  <package id="Castle.Core" version="4.2.0" targetFramework="net47" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net47" />
   <package id="jQuery" version="3.3.1" targetFramework="net47" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net47" />
@@ -34,7 +35,15 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
   <package id="Modernizr" version="2.8.3" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net47" />
+  <package id="Ninject" version="3.3.4" targetFramework="net47" />
+  <package id="Ninject.Extensions.Conventions" version="3.3.0" targetFramework="net47" />
+  <package id="Ninject.Extensions.Factory" version="3.3.2" targetFramework="net47" />
+  <package id="Ninject.MVC5" version="3.3.0" targetFramework="net47" />
+  <package id="Ninject.Web.Common" version="3.3.0" targetFramework="net47" />
+  <package id="Ninject.Web.Common.WebHost" version="3.3.0" targetFramework="net47" />
   <package id="Owin" version="1.0" targetFramework="net47" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net47" />
+  <package id="System.Web.Mvc.Expressions" version="1.0.6" targetFramework="net47" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net47" />
   <package id="WebGrease" version="1.6.0" targetFramework="net47" />
 </packages>
