--- a/StudentSystem/src/Clients/StudentSystem.Clients.Mvc/Views/Web.config
+++ b/StudentSystem/src/Clients/StudentSystem.Clients.Mvc/Views/Web.config
@@ -18,6 +18,8 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="StudentSystem.Clients.Mvc" />
+        <add namespace="System.Web.Mvc.Expressions" />
+        <add namespace="StudentSystem.Clients.Mvc.Controllers" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
