--- a/StudentSystem/src/StudentSystem.Common/StudentSystem.Common.csproj
+++ b/StudentSystem/src/StudentSystem.Common/StudentSystem.Common.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{32184320-2DD5-468A-94B3-819972500D68}</ProjectGuid>
+    <ProjectGuid>{D446FFE2-72EB-4317-ABCF-10586384CBE0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>StudentSystem.Data.Services.Contracts</RootNamespace>
-    <AssemblyName>StudentSystem.Data.Services.Contracts</AssemblyName>
+    <RootNamespace>StudentSystem.Common</RootNamespace>
+    <AssemblyName>StudentSystem.Common</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,18 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ICourseService.cs" />
+    <Compile Include="OperationStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\StudentSystem.Common\StudentSystem.Common.csproj">
-      <Project>{D446FFE2-72EB-4317-ABCF-10586384CBE0}</Project>
-      <Name>StudentSystem.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\StudentSystem.Data.Entities\StudentSystem.Data.Entities.csproj">
-      <Project>{3D0E29A1-2862-41BB-9E03-DFA227B2C024}</Project>
-      <Name>StudentSystem.Data.Entities</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
