--- a/StudentSystem/src/Clients/StudentSystem.Clients.Mvc/Views/Web.config
+++ b/StudentSystem/src/Clients/StudentSystem.Clients.Mvc/Views/Web.config
@@ -20,6 +20,7 @@
         <add namespace="StudentSystem.Clients.Mvc" />
         <add namespace="System.Web.Mvc.Expressions" />
         <add namespace="StudentSystem.Clients.Mvc.Controllers" />
+        <add namespace="GridMvc.Html" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
