--- a/StudentSystem/src/Clients/StudentSystem.Clients.Mvc/Web.config
+++ b/StudentSystem/src/Clients/StudentSystem.Clients.Mvc/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=StudentSystemDb;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <!--<add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=StudentSystemDb;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <!--<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=StudentSystemDb;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=StudentSystemDb;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -25,7 +25,11 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
-  </system.web>
+  <pages>
+      <namespaces>
+        <add namespace="GridMvc" />
+      </namespaces>
+    </pages></system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
