allowed user to register to course

--- a/src/Data/StudentSystem.Data.Services.Contracts/StudentSystem.Data.Services.Contracts.csproj
+++ b/src/Data/StudentSystem.Data.Services.Contracts/StudentSystem.Data.Services.Contracts.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ICourseService.cs" />
+    <Compile Include="IStudentService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
