--- a/src/Data/StudentSystem.Data.Services/StudentSystem.Data.Services.csproj
+++ b/src/Data/StudentSystem.Data.Services/StudentSystem.Data.Services.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="CourseService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StudentService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\StudentSystem.Common\StudentSystem.Common.csproj">
