--- a/src/Data/StudentSystem.Data.Contracts/StudentSystem.Data.Contracts.csproj
+++ b/src/Data/StudentSystem.Data.Contracts/StudentSystem.Data.Contracts.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3126E786-F4CA-47F8-AEA3-EE359FE63FEA}</ProjectGuid>
+    <ProjectGuid>{FDD593E3-AD31-4E23-96DD-431D45DBC403}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>StudentSystem.Data.Services</RootNamespace>
-    <AssemblyName>StudentSystem.Data.Services</AssemblyName>
+    <RootNamespace>StudentSystem.Data.Contracts</RootNamespace>
+    <AssemblyName>StudentSystem.Data.Contracts</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,30 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CourseService.cs" />
+    <Compile Include="ICourseRepository.cs" />
+    <Compile Include="IStudentRepository.cs" />
+    <Compile Include="IUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StudentService.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\StudentSystem.Common\StudentSystem.Common.csproj">
-      <Project>{D446FFE2-72EB-4317-ABCF-10586384CBE0}</Project>
-      <Name>StudentSystem.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\StudentSystem.Data.Contracts\StudentSystem.Data.Contracts.csproj">
-      <Project>{FDD593E3-AD31-4E23-96DD-431D45DBC403}</Project>
-      <Name>StudentSystem.Data.Contracts</Name>
-    </ProjectReference>
     <ProjectReference Include="..\StudentSystem.Data.Entities\StudentSystem.Data.Entities.csproj">
       <Project>{3D0E29A1-2862-41BB-9E03-DFA227B2C024}</Project>
       <Name>StudentSystem.Data.Entities</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\StudentSystem.Data.Services.Contracts\StudentSystem.Data.Services.Contracts.csproj">
-      <Project>{32184320-2DD5-468A-94B3-819972500D68}</Project>
-      <Name>StudentSystem.Data.Services.Contracts</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\StudentSystem.Data\StudentSystem.Data.csproj">
-      <Project>{6A0E0C45-5DEB-4D8D-A9F8-83FD7E25FF8D}</Project>
-      <Name>StudentSystem.Data</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
