--- a/src/Data/StudentSystem.Data.Identity/StudentSystem.Data.Identity.csproj
+++ b/src/Data/StudentSystem.Data.Identity/StudentSystem.Data.Identity.csproj
@@ -77,6 +77,7 @@
     <Compile Include="ApplicationSignInManager.cs" />
     <Compile Include="ApplicationUserManager.cs" />
     <Compile Include="AuthenticationService.cs" />
+    <Compile Include="IAuthenticationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
