--- a/src/Data/StudentSystem.Data/StudentSystem.Data.csproj
+++ b/src/Data/StudentSystem.Data/StudentSystem.Data.csproj
@@ -53,11 +53,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contracts\IStudentSystemDbContext.cs" />
-    <Compile Include="Contracts\IUnitOfWork.cs" />
-    <Compile Include="EntityFrameworkGenericRepository.cs" />
-    <Compile Include="Extensions\DbSetExtensions.cs" />
-    <Compile Include="IEntityFrameworkGenericRepository.cs" />
+    <Compile Include="Repositories\EfCourseRepository.cs" />
+    <Compile Include="Repositories\EfStudentRepository.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentSystemDbContext.cs" />
@@ -67,10 +64,15 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\StudentSystem.Data.Contracts\StudentSystem.Data.Contracts.csproj">
+      <Project>{FDD593E3-AD31-4E23-96DD-431D45DBC403}</Project>
+      <Name>StudentSystem.Data.Contracts</Name>
+    </ProjectReference>
     <ProjectReference Include="..\StudentSystem.Data.Entities\StudentSystem.Data.Entities.csproj">
       <Project>{3D0E29A1-2862-41BB-9E03-DFA227B2C024}</Project>
       <Name>StudentSystem.Data.Entities</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
