--- a/src/Data/StudentSystem.Data.Identity/StudentSystem.Data.Identity.csproj
+++ b/src/Data/StudentSystem.Data.Identity/StudentSystem.Data.Identity.csproj
@@ -64,20 +64,15 @@
       <HintPath>..\..\..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationSignInManager.cs" />
     <Compile Include="ApplicationUserManager.cs" />
     <Compile Include="AuthenticationService.cs" />
     <Compile Include="IAuthenticationService.cs" />
+    <Compile Include="IIdentitySignInService.cs" />
+    <Compile Include="IIdentityUserManagerService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
