--- a/src/Clients/StudentSystem.Clients.Mvc/Web.config
+++ b/src/Clients/StudentSystem.Clients.Mvc/Web.config
@@ -1,23 +1,46 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  https://go.microsoft.com/fwlink/?LinkId=301880
-  -->
+
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" 
+             type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+             requirePermission="false" />
+
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
   </configSections>
+
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=StudentSystemDb;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=StudentSystemDb;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
+
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+
+  <log4net>
+    <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
+      <file value="StudentSystem.Clients.Mvc.log" />
+      <encoding value="utf-8" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="10MB" />
+      <staticLogFileName value="true" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%level %utcdate{ISO8601} %logger [%property{log4net:HostName}] %message %exception %newline" />
+      </layout>
+    </appender>
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="RollingLogFileAppender" />
+    </root>
+  </log4net>
+
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7" />
@@ -29,7 +52,11 @@
       <namespaces>
         <add namespace="GridMvc" />
       </namespaces>
-    </pages></system.web>
+    </pages>
+    </system.web>
+  
+  
+
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
