--- a/src/Clients/StudentSystem.Clients.Mvc/packages.config
+++ b/src/Clients/StudentSystem.Clients.Mvc/packages.config
@@ -8,6 +8,7 @@
   <package id="Grid.Mvc" version="3.0.0" targetFramework="net47" />
   <package id="jQuery" version="3.3.1" targetFramework="net47" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net47" />
+  <package id="log4net" version="2.0.8" targetFramework="net47" />
   <package id="Microsoft.ApplicationInsights" version="2.5.1" targetFramework="net47" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net47" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.5.1" targetFramework="net47" />
