replaced identity with forms authentication

--- a/src/Clients/StudentSystem.Clients.Mvc/Web.config
+++ b/src/Clients/StudentSystem.Clients.Mvc/Web.config
@@ -18,6 +18,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="owin:AutomaticAppStartup" value="false" />
   </appSettings>
 
   <log4net>
@@ -40,7 +41,10 @@
   </log4net>
 
   <system.web>
-    <authentication mode="None" />
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/Login" timeout="60" />
+    </authentication>
+    <!--<authentication mode="None" />-->
     <compilation debug="true" targetFramework="4.7" />
     <httpRuntime targetFramework="4.7" />
     <pages>
@@ -51,9 +55,9 @@
   </system.web>
 
   <system.webServer>
-    <modules>
+    <!--<modules>
       <remove name="FormsAuthentication" />
-    </modules>
+    </modules>-->
     <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
 
