moved client validation messages in separate class

--- a/src/StudentSystem.Common/StudentSystem.Common.csproj
+++ b/src/StudentSystem.Common/StudentSystem.Common.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants\ClientMessage.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="OperationStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
