--- a/src/Clients/StudentSystem.Clients.Mvc/StudentSystem.Clients.Mvc.csproj
+++ b/src/Clients/StudentSystem.Clients.Mvc/StudentSystem.Clients.Mvc.csproj
@@ -255,6 +255,10 @@
       <Project>{D446FFE2-72EB-4317-ABCF-10586384CBE0}</Project>
       <Name>StudentSystem.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\StudentSystem.Infrastructure\StudentSystem.Infrastructure.csproj">
+      <Project>{0AAC1E91-86D3-4614-8BE6-6573ED9C2501}</Project>
+      <Name>StudentSystem.Infrastructure</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\StudentSystem.Services\StudentSystem.Services.csproj">
       <Project>{B8ACA4EA-FA44-4E13-AED3-E48536EF11AD}</Project>
       <Name>StudentSystem.Services</Name>
