--- a/src/StudentSystem.Infrastructure/StudentSystem.Infrastructure.csproj
+++ b/src/StudentSystem.Infrastructure/StudentSystem.Infrastructure.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D446FFE2-72EB-4317-ABCF-10586384CBE0}</ProjectGuid>
+    <ProjectGuid>{0AAC1E91-86D3-4614-8BE6-6573ED9C2501}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>StudentSystem.Common</RootNamespace>
-    <AssemblyName>StudentSystem.Common</AssemblyName>
+    <RootNamespace>StudentSystem.Infrastructure</RootNamespace>
+    <AssemblyName>StudentSystem.Infrastructure</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,9 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,15 +40,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Constants\ClientMessage.cs" />
-    <Compile Include="Extensions\StringExtensions.cs" />
-    <Compile Include="Log.cs" />
-    <Compile Include="OperationStatus.cs" />
+    <Compile Include="Security\ICypher.cs" />
+    <Compile Include="Security\RijndaelPbkdf2Cyhper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <None Include="packages.config" />
+    <ProjectReference Include="..\StudentSystem.Common\StudentSystem.Common.csproj">
+      <Project>{D446FFE2-72EB-4317-ABCF-10586384CBE0}</Project>
+      <Name>StudentSystem.Common</Name>
+    </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
