moved mapping logic in Infrastructure project

--- a/src/StudentSystem.Services/StudentSystem.Services.csproj
+++ b/src/StudentSystem.Services/StudentSystem.Services.csproj
@@ -64,14 +64,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Mapping\AutoMapperConfig.cs" />
-    <Compile Include="Mapping\IMap.cs" />
-    <Compile Include="Mapping\IMappingService.cs" />
-    <Compile Include="Mapping\MappingService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Mapping\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
