add integration test and go to sleep ...

--- a/src/Clients/StudentSystem.Clients.Mvc/Web.config
+++ b/src/Clients/StudentSystem.Clients.Mvc/Web.config
@@ -9,8 +9,8 @@
   </configSections>
 
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=StudentSystemDb;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=StudentSystemDb;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="StudentSystemConnection" connectionString="Data Source=.;Initial Catalog=StudentSystemDb;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="StudentSystemConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=StudentSystemDb;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <appSettings>
