--- a/test/Integration/Data/StudentSystem.Data.Services.Tests/App.config
+++ b/test/Integration/Data/StudentSystem.Data.Services.Tests/App.config
@@ -6,8 +6,8 @@
   </configSections>
 
   <connectionStrings>
-    <!--<add name="StudentSystemConnection" connectionString="Data Source=.;Initial Catalog=StudentSystemDbIntegrationTests;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="StudentSystemConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=StudentSystemDbIntegrationTests;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="StudentSystemConnection" connectionString="Data Source=.;Initial Catalog=StudentSystemDbIntegrationTests;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="StudentSystemConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=StudentSystemDbIntegrationTests;Integrated Security=True" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
 
   <entityFramework>
