--- a/test/Integration/Data/StudentSystem.Data.Services.Tests/StudentSystem.Data.Services.Tests.csproj
+++ b/test/Integration/Data/StudentSystem.Data.Services.Tests/StudentSystem.Data.Services.Tests.csproj
@@ -67,9 +67,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IsolationAttribute.cs" />
+    <Compile Include="RollbackAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CourseServiceTests.cs" />
+    <Compile Include="SetUpFixture.cs" />
     <Compile Include="TestDbConfiguration.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -80,6 +81,10 @@
     <ProjectReference Include="..\..\..\..\src\Clients\StudentSystem.Clients.Mvc\StudentSystem.Clients.Mvc.csproj">
       <Project>{109E548F-EF39-4D6F-B493-59E6B6573BE5}</Project>
       <Name>StudentSystem.Clients.Mvc</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\src\Data\StudentSystem.Data.Contracts\StudentSystem.Data.Contracts.csproj">
+      <Project>{FDD593E3-AD31-4E23-96DD-431D45DBC403}</Project>
+      <Name>StudentSystem.Data.Contracts</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\..\src\Data\StudentSystem.Data.Entities\StudentSystem.Data.Entities.csproj">
       <Project>{3D0E29A1-2862-41BB-9E03-DFA227B2C024}</Project>
