--- a/src/StudentSystem.Infrastructure/packages.config
+++ b/src/StudentSystem.Infrastructure/packages.config
@@ -5,4 +5,5 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net47" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
+  <package id="Polly" version="6.1.2" targetFramework="net47" />
 </packages>
