--- a/src/Data/StudentSystem.Data.Services.Contracts/StudentSystem.Data.Services.Contracts.csproj
+++ b/src/Data/StudentSystem.Data.Services.Contracts/StudentSystem.Data.Services.Contracts.csproj
@@ -45,9 +45,9 @@
       <Project>{D446FFE2-72EB-4317-ABCF-10586384CBE0}</Project>
       <Name>StudentSystem.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\StudentSystem.Data.Entities\StudentSystem.Data.Entities.csproj">
-      <Project>{3D0E29A1-2862-41BB-9E03-DFA227B2C024}</Project>
-      <Name>StudentSystem.Data.Entities</Name>
+    <ProjectReference Include="..\..\StudentSystem.Domain\StudentSystem.Domain.csproj">
+      <Project>{3d0e29a1-2862-41bb-9e03-dfa227b2c024}</Project>
+      <Name>StudentSystem.Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
