--- a/src/Data/StudentSystem.Data.Services/StudentSystem.Data.Services.csproj
+++ b/src/Data/StudentSystem.Data.Services/StudentSystem.Data.Services.csproj
@@ -45,6 +45,10 @@
       <Project>{D446FFE2-72EB-4317-ABCF-10586384CBE0}</Project>
       <Name>StudentSystem.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\StudentSystem.Domain\StudentSystem.Domain.csproj">
+      <Project>{3d0e29a1-2862-41bb-9e03-dfa227b2c024}</Project>
+      <Name>StudentSystem.Domain</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\StudentSystem.Infrastructure\StudentSystem.Infrastructure.csproj">
       <Project>{0AAC1E91-86D3-4614-8BE6-6573ED9C2501}</Project>
       <Name>StudentSystem.Infrastructure</Name>
@@ -52,10 +56,6 @@
     <ProjectReference Include="..\StudentSystem.Data.Contracts\StudentSystem.Data.Contracts.csproj">
       <Project>{FDD593E3-AD31-4E23-96DD-431D45DBC403}</Project>
       <Name>StudentSystem.Data.Contracts</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\StudentSystem.Data.Entities\StudentSystem.Data.Entities.csproj">
-      <Project>{3D0E29A1-2862-41BB-9E03-DFA227B2C024}</Project>
-      <Name>StudentSystem.Data.Entities</Name>
     </ProjectReference>
     <ProjectReference Include="..\StudentSystem.Data.Services.Contracts\StudentSystem.Data.Services.Contracts.csproj">
       <Project>{32184320-2DD5-468A-94B3-819972500D68}</Project>
