--- a/src/Data/StudentSystem.Data/StudentSystem.Data.csproj
+++ b/src/Data/StudentSystem.Data/StudentSystem.Data.csproj
@@ -57,13 +57,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\StudentSystem.Domain\StudentSystem.Domain.csproj">
+      <Project>{3d0e29a1-2862-41bb-9e03-dfa227b2c024}</Project>
+      <Name>StudentSystem.Domain</Name>
+    </ProjectReference>
     <ProjectReference Include="..\StudentSystem.Data.Contracts\StudentSystem.Data.Contracts.csproj">
       <Project>{FDD593E3-AD31-4E23-96DD-431D45DBC403}</Project>
       <Name>StudentSystem.Data.Contracts</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\StudentSystem.Data.Entities\StudentSystem.Data.Entities.csproj">
-      <Project>{3D0E29A1-2862-41BB-9E03-DFA227B2C024}</Project>
-      <Name>StudentSystem.Data.Entities</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
