--- a/test/Integration/Data/StudentSystem.Data.Services.Tests/StudentSystem.Data.Services.Tests.csproj
+++ b/test/Integration/Data/StudentSystem.Data.Services.Tests/StudentSystem.Data.Services.Tests.csproj
@@ -78,10 +78,6 @@
       <Project>{FDD593E3-AD31-4E23-96DD-431D45DBC403}</Project>
       <Name>StudentSystem.Data.Contracts</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\src\Data\StudentSystem.Data.Entities\StudentSystem.Data.Entities.csproj">
-      <Project>{3D0E29A1-2862-41BB-9E03-DFA227B2C024}</Project>
-      <Name>StudentSystem.Data.Entities</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\..\..\src\Data\StudentSystem.Data.Services.Contracts\StudentSystem.Data.Services.Contracts.csproj">
       <Project>{32184320-2DD5-468A-94B3-819972500D68}</Project>
       <Name>StudentSystem.Data.Services.Contracts</Name>
@@ -93,6 +89,10 @@
     <ProjectReference Include="..\..\..\..\src\StudentSystem.Common\StudentSystem.Common.csproj">
       <Project>{D446FFE2-72EB-4317-ABCF-10586384CBE0}</Project>
       <Name>StudentSystem.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\src\StudentSystem.Domain\StudentSystem.Domain.csproj">
+      <Project>{3d0e29a1-2862-41bb-9e03-dfa227b2c024}</Project>
+      <Name>StudentSystem.Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
