--- a/src/StudentSystem.Domain.Services/StudentSystem.Domain.Services.csproj
+++ b/src/StudentSystem.Domain.Services/StudentSystem.Domain.Services.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FDD593E3-AD31-4E23-96DD-431D45DBC403}</ProjectGuid>
+    <ProjectGuid>{3126E786-F4CA-47F8-AEA3-EE359FE63FEA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>StudentSystem.Data.Contracts</RootNamespace>
-    <AssemblyName>StudentSystem.Data.Contracts</AssemblyName>
+    <RootNamespace>StudentSystem.Data.Services</RootNamespace>
+    <AssemblyName>StudentSystem.Data.Services</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,17 +32,34 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ICourseRepository.cs" />
-    <Compile Include="IStudentRepository.cs" />
-    <Compile Include="IUnitOfWork.cs" />
+    <Compile Include="AccountService.cs" />
+    <Compile Include="CourseService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StudentService.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\StudentSystem.Domain\StudentSystem.Domain.csproj">
+    <ProjectReference Include="..\StudentSystem.Common\StudentSystem.Common.csproj">
+      <Project>{D446FFE2-72EB-4317-ABCF-10586384CBE0}</Project>
+      <Name>StudentSystem.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\StudentSystem.Domain.Services.Contracts\StudentSystem.Domain.Services.Contracts.csproj">
+      <Project>{32184320-2DD5-468A-94B3-819972500D68}</Project>
+      <Name>StudentSystem.Domain.Services.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\StudentSystem.Domain\StudentSystem.Domain.csproj">
       <Project>{3d0e29a1-2862-41bb-9e03-dfa227b2c024}</Project>
       <Name>StudentSystem.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\StudentSystem.Infrastructure\StudentSystem.Infrastructure.csproj">
+      <Project>{0AAC1E91-86D3-4614-8BE6-6573ED9C2501}</Project>
+      <Name>StudentSystem.Infrastructure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\StudentSystem.Persistence.Contracts\StudentSystem.Persistence.Contracts.csproj">
+      <Project>{FDD593E3-AD31-4E23-96DD-431D45DBC403}</Project>
+      <Name>StudentSystem.Persistence.Contracts</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
