--- a/src/Clients/StudentSystem.Clients.Mvc/Web.config
+++ b/src/Clients/StudentSystem.Clients.Mvc/Web.config
@@ -10,6 +10,7 @@
   <connectionStrings>
     <!--<add name="StudentSystemConnection" connectionString="Data Source=.;Initial Catalog=StudentSystemDb;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <add name="StudentSystemConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=StudentSystemDb;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="StudentSystemAuthConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=StudentSystemAuthDb;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <appSettings>
