--- a/src/StudentSystem.Domain.Services.Contracts/StudentSystem.Domain.Services.Contracts.csproj
+++ b/src/StudentSystem.Domain.Services.Contracts/StudentSystem.Domain.Services.Contracts.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{32184320-2DD5-468A-94B3-819972500D68}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>StudentSystem.Data.Services.Contracts</RootNamespace>
-    <AssemblyName>StudentSystem.Data.Services.Contracts</AssemblyName>
+    <RootNamespace>StudentSystem.Domain.Services.Contracts</RootNamespace>
+    <AssemblyName>StudentSystem.Domain.Services.Contracts</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
