--- a/src/StudentSystem.Persistence.Contracts/StudentSystem.Persistence.Contracts.csproj
+++ b/src/StudentSystem.Persistence.Contracts/StudentSystem.Persistence.Contracts.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{FDD593E3-AD31-4E23-96DD-431D45DBC403}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>StudentSystem.Data.Contracts</RootNamespace>
-    <AssemblyName>StudentSystem.Data.Contracts</AssemblyName>
+    <RootNamespace>StudentSystem.Persistence.Contracts</RootNamespace>
+    <AssemblyName>StudentSystem.Persistence.Contracts</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
